# quickswitch

./: Cargo.toml
src/: app.rs  app_state.rs  config.rs  lib.rs  terminal.rs  theme.rs  utils.rs
src/core/: events.rs  input_dispatcher.rs
src/modes/: mod.rs  preview.rs
src/modes/history/: data_provider.rs  handler.rs
src/modes/history/renderers/: help.rs  history_list.rs
src/modes/normal/: data_provider.rs  handler.rs
src/modes/normal/renderers/: file_list.rs
src/services/: data_provider.rs  global_preview_state.rs  mod.rs  preview_manager.rs
src/services/preview/: directory_generator.rs  image_generator.rs  pdf_generator.rs  preview_generator.rs  text_generator.rs
