[package]
name = "quickswitch"
version = "0.2.3"
edition = "2024"
description = "A terminal-based tool for quickly switching between directories and files."
authors = ["Debin <luodeb@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/luodeb/quickswitch.git"
documentation = "https://docs.rs/quickswitch"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
ratatui-image = { version = "8.0", features = ["crossterm"] }
image = "0.25.0"
crossterm = "0.29.0"
anyhow = "1.0"
tokio = { version = "1.46", features = ["full"] }
pdf-extract = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tempfile = "3.20.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase"] }
